# ComplexityMetric

./: .gitignore  README.md  app_clustering.py  app_dynamics.py  brainstorm.md  make_goldens.py  pyproject.toml  requirements.txt
Complexity/: __init__.py  base.py  discrete.py  nn.py  order.py  prediction.py  test.ipynb  time.py  utils.py
DynamicalSystems/: __init__.py  base.py  rollout.py  systems.py  test.ipynb  utils.py
FeatureExtractor/: __init__.py  embedding.py  extractors.py  test.ipynb
webapp/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
webapp/dev/: gpu-parity.html  parity.ts
webapp/src/: config.ts  main.ts  pipeline.ts
webapp/src/core/: prng.ts  progress.ts
webapp/src/extractors/: flatten.ts  registry.ts  spatialStats.ts  types.ts
webapp/src/extractors/tfjs/: backend.ts  common.ts  ops.ts  randomConvNet.ts  randomVgg.ts  weights.ts
webapp/src/metrics/: brotli.ts  compressedRatio.ts  convert.ts  entropy.ts  knn.ts  linalg.ts  mi.ts  openEndedness.ts  registry.ts  ridge.ts  transient.ts  types.ts  windows.ts
webapp/src/projection/: index.ts  pca.ts  tsne.ts  umap.ts
webapp/src/systems/: convert.ts  langtonHash.ts  registry.ts  rollout.ts  rules.ts  types.ts
webapp/src/types/: tsne-js.d.ts
webapp/src/ui/: charts.ts  controls.ts  dom.ts  playback.ts  progressBar.ts  render.ts  results.ts  sidebar.ts  style.css  tabs.ts
webapp/test/: binaryCa1d.test.ts  extractors.test.ts  goldens.test.ts  metrics.test.ts  systems.test.ts  tfjsExtractors.test.ts
webapp/test/fixtures/: goldens.json
(+18 files in other folders)
